# mcs51_emulator

./: AGENT.md  ARCHITECTURE.md  CMakeLists.txt  README.md  cpu.c  cpu.h  decoder.c  decoder.h  hex_loader.c  hex_loader.h  instr_impl.c  instr_impl.h  instr_list.h  main.c  mem_default.c  mem_default.h  mem_map.c  mem_map.h  mem_rom.c  mem_rom.h  timing.c  timing.h  uart.h
.github/: FUNDING.yml
docs/: COVERAGE_INSTR.md  README.md
docs/en/: CODE_XDATA_MEMORY_IMPLEMENTATION.md  CPU_IMPLEMENTATION.md  GPIO_PORTS_IMPLEMENTATION.md  IMPLEMENTATION_USAGE_GUIDE.md  REGISTER_MEMORY_HOOKS_IMPLEMENTATION.md  TIMERS_IMPLEMENTATION.md  UART_SERIAL_IMPLEMENTATION.md
docs/es/: GUIA_IMPLEMENTACION_USO.md  IMPLEMENTACION_CPU.md  IMPLEMENTACION_GPIO_PORTS.md  IMPLEMENTACION_HOOKS_REGISTROS_MEMORIA.md  IMPLEMENTACION_MEMORIA_CODE_XDATA.md  IMPLEMENTACION_SERIAL_UART.md  IMPLEMENTACION_TIMERS.md
lib/: CMakeLists.txt  cpu.c  cpu.h  decoder.c  decoder.h  instr_impl.c  instr_list.h  mcs51_emulator.h  ports.c  ports.h  timers.c  timers.h  timing.c  timing.h  uart.c  uart.h
mc51code/: Makefile  add_loop.asm  add_loop.hex  bas52.asm  blink_delay.asm  blink_delay.hex  blink_p1.asm  blink_p1.hex  call_ret.asm  call_ret.hex  counter_ram.asm  counter_ram.hex  serial_hello.asm  serial_hello.hex
src/: hex_loader.c  main.c
tests/: CMakeLists.txt  test_add_addc_subb.c  test_add_flags.c  test_addc_subb_flags.c  test_bit_jumps.c  test_calls_jmp.c  test_common.c  test_common.h  test_da_flags.c  test_da_mul_div_xch.c  test_djnz_cjne.c  test_idle_wakeup.c  test_inc_dec_a.c  test_inc_dec_misc.c  test_jumps_basic.c  test_logic_ops.c  test_main.c  test_mov_basic.c  test_mov_indirect_and_rn.c  test_movc_movx.c  test_movc_pc.c  test_nop.c  test_parity_flag.c  test_runner.c  test_timer0_counter_edges.c  test_timer2_baud_profile_tf2.c  test_timer2_capture_mode.c  test_timer2_external_reload_mode.c  test_timer2_interrupt_from_exf2.c
